@@ -173,7 +173,7 @@ brush_rename_invoker (GimpProcedure     *procedure,
       GimpBrush *brush = (GimpBrush *)
         gimp_container_get_child_by_name (gimp->brush_factory->container, name);
 
-      if (brush && GIMP_DATA (brush)->writable)
+      if (brush && GIMP_DATA (brush)->writable && strlen (new_name))
         {
           gimp_object_set_name (GIMP_OBJECT (brush), new_name);
           actual_name = g_strdup (gimp_object_get_name (GIMP_OBJECT (brush)));
