@@ -147,7 +147,7 @@ sub palette_rename {
   GimpPalette *palette = (GimpPalette *)
     gimp_container_get_child_by_name (gimp->palette_factory->container, name);
 
-  if (palette && GIMP_DATA (palette)->writable)
+  if (palette && GIMP_DATA (palette)->writable && strlen (new_name))
     {
       gimp_object_set_name (GIMP_OBJECT (palette), new_name);
       actual_name = g_strdup (gimp_object_get_name (GIMP_OBJECT (palette)));
