@@ -1,3 +1,14 @@
+2007-04-22  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/brush.pdb (brush_rename)
+	* tools/pdbgen/pdb/gradient.pdb (gradient_rename)
+	* tools/pdbgen/pdb/palette.pdb (palette_rename): don't allow the
+	empty string as new name. Fixes bug #431845.
+
+	* app/pdb/brush_cmds.c
+	* app/pdb/gradient_cmds.c
+	* app/pdb/palette_cmds.c: regenerated.
+
 2007-04-21  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/dbus-service.xml
@@ -117,7 +128,7 @@
 	* app/plug-in/gimppluginmanager.c
 	* app/plug-in/gimpplugin.c
 	* app/gui/themes.c: don't translate --verbose or g_printerr()
-	messages, they are debugging output that often end up in bugzilla
+	messages, they are debugging output that often ends up in bugzilla
 	and should not depend on the locale.
 
 2007-04-17  Michael Natterer  <mitch@gimp.org>
